# stans_crossSysInfo

./: CMakeLists.txt  README.md
client(crosscompile)/: README.md  run.sh
client(crosscompile)/output/: info_log.txt
client(crosscompile)/src/: main.cpp
client(crosscompile)/src/lib/: edge_client.h  scan_result.h  win_azlog.h
client(crosscompile)/utility/: sample.cpp
client(crosscompile)/utility/linux/: sample  sample.cpp
client(crosscompile)/window/: CMakeLists.txt  run.bat
client(request_crosscompile)/: README.md
output/: debug_log.txt
server(ubuntu)/: CMakeLists.txt  run.sh  server.cpp
src/: edge_client.cpp
src/lib/: azlog.cpp  azlog.h  edge_client.h
utility/linux/: result_log.txt  run.sh
window/: run.bat
